--- a/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.html
@@ -1,1 +1,88 @@
-<p>implementation-edit works!</p>
+<div class="jumbotron jumbotron-fluid header-image">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col d-flex justify-content-center">
+                        <h1> {{ implementation.implementableName}} </h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col  d-flex justify-content-center">
+                        <span> {{ implementation.date | date: 'dd/MM/yyyy'  }}  </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row my-4">
+            <div class="col-6">
+                <p>Realizado por: {{ implementation.educatorName }}</p>
+            </div>
+            <div class="col-6 d-flex justify-content-end">
+                <p>Estado: {{ statusFormat(implementation.completed) }}</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row mt-4">
+        <div class="col-12 col-sm-6 col-xl-7">
+            <h4>Ubicación</h4>
+            <!-- MAP API -->
+            <div style="height: 300px;"
+                leaflet 
+                [leafletOptions]="options"
+                [(leafletCenter)]="center"
+                [(leafletLayers)]="layers">
+            </div>
+            <span class="btn btn-primary" (click)="showPos()" >Actualizar Posición</span>
+            <span> {{currentPosition}} </span>
+        </div>
+        <div class="col-sm col-xl">
+            <div class="row">
+                <div class="col-6">
+                    <button class="btn btn-success btn-sm col-12" (click)="onSubmit()">Guardar Cambios</button>
+                </div>
+                <div class="col-6">
+                    <button class="btn btn-warning btn-sm col-12" (click)="onComplete()" >Confirmar implementación</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="participants" class="col-2 col-form-label">Participantes</label>
+                    <div class="col">
+                        <select class="form-control" >
+                            <option *ngFor="let n of getRange(50)" value="n">
+                                {{n}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col">
+                    <label for="date" class="col-2 col-form-label">Fecha</label>
+                    <input type="date" class="form-control" [(ngModel)]="implementation.date">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-7">
+            <div class="col-12">
+                <h3>Actividades</h3>
+            </div>
+            <div class="col">
+                <app-displayer [sections]="activities"></app-displayer>
+            </div>
+            <div class="col-12">
+                <h3>Preguntas de evaluación</h3>
+            </div>
+            <div class="col">
+                <app-display-questions [questions]="questions" [answers]="answers" ></app-display-questions>
+            </div>
+        </div>
+        <div class="col-12 col-md-5">
+            <h3> Evidencias de trabajo </h3>
+            <app-edit-files [files]="files" [moduleFiles]="moduleFiles" [deletedModuleFiles]="deletedModuleFiles"></app-edit-files>
+        </div>
+    </div>
+</div>
