--- a/aclap/src/app/components/shared/header/header.component.html
+++ b/aclap/src/app/components/shared/header/header.component.html
@@ -3,10 +3,10 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#Navbar">
             <span class="navbar-toggler-icon order-xs-1"></span>
         </button>
-        <img class="d-block d-sm-none" src="../../../assets/logo.png" height="30">
+        <img class="d-block d-sm-none" src="../../../../assets/logo-alpha.png" height="30">
         <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
-                <a (click)="changeIndex(0)" class="navbar-brand mr-auto d-none d-md-block" [routerLink]="['/inicio']"><img src="../../../assets/logo.png" height="30">EDUCA-ACLAP</a>
+                <a (click)="changeIndex(0)" class="navbar-brand mr-auto d-none d-md-block" [routerLink]="['/inicio']"><img src="../../../assets/logo-alpha.png" height="30"></a>
                 <li (click)="changeIndex(0)" class="nav-item ml-md-3" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/inicio']">Inicio</a></li>
                 <li *ngIf="loggedIn" (click)="changeIndex(1)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/perfil']"> Perfil</a></li>
                 <li (click)="changeIndex(0)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/modulos']">Módulos</a></li>
