--- a/aclap/src/app/components/profile-shared/implementable-implementations/implementable-implementations.component.html
+++ b/aclap/src/app/components/profile-shared/implementable-implementations/implementable-implementations.component.html
@@ -24,7 +24,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 d-flex justify-content-center">
-            <h1> Implementaciones de {{ implementable.name }}  </h1>
+            <h1> Implementaciones de {{ implementable }}  </h1>
         </div>
     </div>
     <div *ngFor="let imp of implementations" class="row">
