--- a/aclap/src/app/components/shared/login/login.component.html
+++ b/aclap/src/app/components/shared/login/login.component.html
@@ -2,11 +2,8 @@
     <div id="main-content" class="row d-flex align-items-center justify-content-center">
         <div class="col-12 col-md-4 ">
             <div class="row  d-flex justify-content-center">
-                <div class="col-2">
-                    <img class="img-fluid" src="src=../../../assets/logo.png" alt="EDUCA-ACLAP">
-                </div>
-                <div class="col-5">
-                    <h2>EDUCA-ACLAP</h2>
+                <div class="col-8">
+                    <img class="img-fluid" src="src=../../../assets/logo-alpha.png" alt="EDUCA-ACLAP">
                 </div>
             </div>
             <div id="log-card" class="my-5 card shadow-lg">
