--- a/aclap/src/app/components/section-shared/edit/edit-module-info/edit-module-info.component.html
+++ b/aclap/src/app/components/section-shared/edit/edit-module-info/edit-module-info.component.html
@@ -1,6 +1,6 @@
 <!-- REFACTORING -->
 <div class="row">
-    <h3>Información general del Módulo</h3>
+    <h3>Información general del módulo</h3>
 </div>
 <form [formGroup]="moduleForm">
     <div class="row mt-3">
