--- a/aclap/src/app/components/shared/footer/footer.component.html
+++ b/aclap/src/app/components/shared/footer/footer.component.html
@@ -14,7 +14,7 @@
                     <li><a [routerLink]="['/inicio']">Inicio</a></li>
                     <li><a [routerLink]="['/perfil']">Perfil</a></li>
                     <li><a [routerLink]="['/modulos']">Módulos</a></li>
-                    <li><a>Eventos</a></li>
+                    <li><a [routerLink]="['/eventos']">Eventos</a></li>
                     <li><a>Acerca de</a></li>
                 </ul>
             </div>
