Ultimos detalles de implementar modulo

--- a/aclap/src/app/components/module-shared/modules/modules.component.tns.html
+++ b/aclap/src/app/components/module-shared/modules/modules.component.tns.html
@@ -1,7 +1,7 @@
 <StackLayout>
     <ScrollView orientation="vertical" height="1000">
         <StackLayout>
-            <Gridlayout rows="*, *, *, *" columns="*">
+            <Gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
                 <Image rowspan="3" col="0" src="res://corredor_bio_2" stretch="aspectFill" class="img-banner"></Image>
                 <Label row="1" col="0" text="Modulos" class="header-text" textWrap="true"></Label>
             </Gridlayout>
