--- a/aclap/src/app/components/profile-shared/educator-application/educator-application.component.tns.html
+++ b/aclap/src/app/components/profile-shared/educator-application/educator-application.component.tns.html
@@ -24,6 +24,17 @@
                 <TextField formControlName="email" hint="usuario@correo.com" class="input input-border input-form"></TextField>
 
                 <Label text="Dirección" class="text-subtitle"></Label>
+                <!-- <ContentView height="240" width="240">
+                    <map:MapboxView
+                        accessToken="pk.eyJ1IjoiZmFiaW9hbHBpemFyIiwiYSI6ImNrazNnZXdyZDE3cXYycG55enUwdGZieHIifQ.pQwYzj4XfsGg5UXneMl6GA"
+                        mapStyle="traffic_night"
+                        latitude="52.3702160"
+                        longitude="4.8951680"
+                        zoomLevel="3"
+                        showUserLocation="true"
+                        mapReady="onMapReady">
+                    </map:MapboxView>
+                  </ContentView> -->
                 <TextField formControlName="address" hint="Distrito, Canton, Provincia" class="input input-border input-form"></TextField>
                 
                 <Label text="Fecha de nacimiento" class="text-subtitle"></Label>
