--- a/aclap/src/app/components/module-shared/display/display-questions/display-questions.component.tns.html
+++ b/aclap/src/app/components/module-shared/display/display-questions/display-questions.component.tns.html
@@ -10,7 +10,7 @@
 
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
-                <Label text="Formulario" class="title-text-questions" textWrap="true"></Label>
+                <Label text="Formulario" class="text-subtitle-first" textWrap="true"></Label>
 
                 <StackLayout orientation="horizontal">
                     <Label text="Fecha:" class="subtitle-text-picker" textWrap="true"></Label>
@@ -41,11 +41,12 @@
 
                 <Label text="Evidencias de trabajo" class="title-text-questions" textWrap="true"></Label>
 
-                <StackLayout *ngFor="let file of files" orientation="vertical">
+                <StackLayout *ngFor="let file of fileNames; index as i" orientation="vertical">
 
-                    <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true (tap)="startDownload(file.url, file.name)">
+                    <Card:CardView class="cardStyle" margin="10" elevation="10" shadowColor="#FE00FC" shadowOpacity="1" radius="25" ripple=true>
                         <GridLayout columns="auto, *, auto" rows="auto, *, auto">
-                            <Label row="0" col="1" text="{{ file.name }}" class="text" textWrap="true" ></Label>
+                            <Label row="0" col="0" text="{{ file }}" class="subtitle-text-file"></Label>
+                            <Button row="0" col="1" text="Eliminar" class="btn btn-primary btn-fileRemover" (tap)="removeFile($event, i)"></Button>
                         </GridLayout>
                     </Card:CardView>
     
