--- a/aclap/src/app/components/module-shared/display/display-questions/display-questions.component.tns.scss
+++ b/aclap/src/app/components/module-shared/display/display-questions/display-questions.component.tns.scss
@@ -5,6 +5,11 @@ $nav-color:#1c81a9;
 $gray-dark: #596668;
 $l-grey: #d3d8d8;
 
+.cardStyle {
+    background-color: #fff;
+    color: #fff;
+}
+
 .header-text{
     font-size: 36;
     font-weight: bold;
@@ -46,12 +51,11 @@ $l-grey: #d3d8d8;
 }
 
 .text-subtitle-first {
-    color: #000000;
-    font-size: 18;
-    margin-left: 15;
-    text-align: left;
-    margin-top: 5;
-    margin-bottom: 5;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 28;
+    text-align: center;
+    background-color: #1c81a9;
   }
 
 .subtitle-text-question{
@@ -59,6 +63,15 @@ $l-grey: #d3d8d8;
     font-size: 18;
     text-align: center;
     margin-top: 5;
+}
+
+.subtitle-text-file{
+    color: #000000;
+    font-weight: bold;
+    font-size: 14;
+    margin-left: 15;
+    margin-top: 12;
+    text-align: left;
 }
 
 .madeby-text{
@@ -144,5 +157,16 @@ $l-grey: #d3d8d8;
     font-size: 16;
     font-weight: bold;
     width: 200;
+    margin: 10;
+}
+
+.btn-fileRemover {
+    color: #ffffff;
+    border-radius: 3;
+    background-color: #f13939;
+    font-size: 12;
+    font-weight: bold;
+    width: 60;
+    height: 30;
     margin: 10;
 }
