--- a/aclap/src/app/components/profile-shared/implementation-list/implementation-list.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-list/implementation-list.component.html
@@ -2,6 +2,11 @@
     <div class="col-12">
         <div class="card shadow clickable my-3" [routerLink]="editOrView(imp)">
             <div class="card-body" >
+                <div class="row d-flex justify-content-center">
+                    <div class="col-auto">
+                        <h4>{{ imp.implementableName }}</h4>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-6">
                         <span>Realizado por: {{ imp.educatorName }} {{ imp.educatorLastname }} </span>
